[gd_scene load_steps=2 format=3 uid="uid://bkaxinbycl8fx"]

[ext_resource type="Script" path="res://main_menu/main_menu.gd" id="1_sacl1"]

[node name="MainMenu" type="MarginContainer"]
texture_filter = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -161.0
offset_right = 161.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_sacl1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="NameEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Username"
clear_button_enabled = true

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "JOIN"

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "HOST"

[node name="AddressEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Address"
clear_button_enabled = true
